# SmartTrain-Node

./: .gitignore  CMakeLists.txt  ESP32_Development_Standards.md  README.md  partitions.csv  sdkconfig
components/app_mqtt/: CMakeLists.txt  app_mqtt.c
components/app_wifi/: CMakeLists.txt  app_wifi.c
components/bsp/: CMakeLists.txt  README.md  bsp_lcd.c  bsp_touch.c
components/common/: CMakeLists.txt  README.md  data_queue.c  sensor_data.c
components/drivers/: CMakeLists.txt  README.md  driver_as608.c  driver_co2.c  driver_dht.c  driver_fm225.c
components/espressif__mqtt/: CMakeLists.txt
components/ui_custom/: CMakeLists.txt  events_init.c  events_init.h  gui_guider.c  gui_guider.h  setup_scr_screen.c  setup_scr_screen_Confirm.c  setup_scr_screen_Standby.c  (+6 more)
docs/: PROJECT_ARCHITECTURE.md  README.md  WIFI_LCD_LVGL_RESET_INVESTIGATION.md  attendance_bio_flow.drawio  attendance_profiles_seed.csv  graduation_ppt_outline.md  graduation_ppt_text_version.md
main/: CMakeLists.txt  Kconfig.projbuild  app_attendance.c  app_bootstrap.c  app_co2.c  app_display.c  app_face.c  app_fingerprint.c  app_lvgl.c  app_lvgl.h  app_network.c  app_perf_monitor.c  app_rfid.c  app_sensor.c  app_test_hub.c  app_time.c  attendance_profile.c  attendance_record.c  idf_component.yml  main.c  sensor_data.c
main/include/: app_attendance.h  app_bootstrap.h  app_co2.h  app_display.h  app_face.h  app_fingerprint.h  app_network.h  app_perf_monitor.h  app_rfid.h  app_sensor.h  app_test_hub.h  app_time.h  attendance_profile.h  attendance_record.h  sensor_data.h
tools/: README.md
(+34 files in other folders)
