idf_component_register(SRCS "app_perf_monitor.c" "app_face.c" "app_fingerprint.c" "app_lvgl.c" "app_display.c" "app_co2.c" "app_rfid.c" "app_time.c" "attendance_profile.c" "app_attendance.c" "app_test_hub.c" "main.c" "app_sensor.c" "app_network.c" "sensor_data.c"
                    INCLUDE_DIRS "." "include")
